# cnr_control_toolbox

./: .codecov.sh  .coverage.sh  .gitignore  .rosinstall  .travis.yml  .upstream.repos  README.md  cnr_control_toolbox.rosinstall  codecov.yml  dependencies.rosinstall  doxygen.in
.github/: industrial_ci_action.yml
.github/workflows/: industrial_ci_action.yml
frequency_identification/: CMakeLists.txt  frequency_identificationConfig.cmake.in  frequency_identificationConfigVersion.cmake.in  package.xml  state_space_systemsConfigVersion.cmake.in
frequency_identification/config/: config.yaml
frequency_identification/include/frequency_identification/: frequency_identification.h
frequency_identification/launch/: test.launch
frequency_identification/matlab_script/: computeHarmonics.m  fourierCoefficient.m  fourierCoefficients.m  multisine.m  test_multisine.m
frequency_identification/src/: frequency_identification_node.cpp  frequency_identification_test.cpp  plot_freq_resp.py  sweep_node.cpp
frequency_identification/src/frequency_identification/: frequency_identification.cpp
kinematics_filters/: CMakeLists.txt  kinematics_filtersConfig.cmake.in  kinematics_filtersConfigVersion.cmake.in  package.xml  rosdoc.yaml
kinematics_filters/example/: example.cpp  plot.py
kinematics_filters/include/kinematics_filters/: kinematics_filters.h
kinematics_filters/include/kinematics_filters/internal/: kinematics_filters_impl.h
kinematics_filters/src/: kinematics_fitlers.cpp
kinematics_filters/test/: test_filters.cpp  test_filters.launch
predictive_systems/: CMakeLists.txt  package.xml
predictive_systems/include/predictive_systems/: continuous_predictive_systems.h  discrete_predictive_systems.h  integral_discrete_predictive_systems.h  integral_predictive_systems.h  predictive_systems.h  symbols.h
predictive_systems/include/predictive_systems/internal/: discrete_predictive_systems_impl.h  integral_discrete_predictive_systems_impl.h  integral_predictive_systems_impl.h  predictive_systems_impl.h
predictive_systems/test/: test_state_space_matrix.cpp  test_state_space_matrix.launch
state_space_controllers/: CMakeLists.txt  frequency_identificationConfig.cmake.in  package.xml  state_space_controllersConfig.cmake.in  state_space_controllersConfigVersion.cmake.in
state_space_controllers/include/state_space_controllers/: controllers.h
state_space_controllers/include/state_space_controllers/internal/: controllers_impl.h
state_space_controllers/src/: state_space_controllers.cpp
state_space_controllers/test/: plot.py  test_controllers.launch  test_pid.cpp
state_space_filters/: CMakeLists.txt  package.xml  state_space_filtersConfig.cmake.in  state_space_filtersConfigVersion.cmake.in
state_space_filters/config/: test.yaml
state_space_filters/include/state_space_filters/: common_filters.h  filtered_values.h  fir_filters.h  iir_filters.h  sg_filter.h
state_space_filters/include/state_space_filters/internal/: filtered_values_impl.h  fir_filters_impl.h  iir_filters_impl.h  sg_filter_impl.h
state_space_filters/src/: state_space_filters.cpp
state_space_filters/test/: test_filtered_values.cpp  test_filtered_values.launch  test_filters.cpp  test_filters.launch
state_space_ros/: CMakeLists.txt  package.xml
state_space_ros/include/state_space_ros/: ros_params.h
state_space_ros/include/state_space_ros/internal/: ros_params_impl.h
state_space_ros/test/: test_controllers.launch  test_filtered_values.cpp  test_filtered_values.launch  test_filters.cpp  test_filters.launch  test_pid.cpp  test_state_space_matrix.cpp  test_state_space_matrix.launch
state_space_systems/: CMakeLists.txt  package.xml  state_space_systemsConfig.cmake.in
state_space_systems/include/state_space_systems/: continuous_state_space_systems.h  discrete_state_space_systems.h  integral_discrete_state_space_systems.h  integral_state_space_systems.h  state_space_systems.h  symbols.h
state_space_systems/include/state_space_systems/internal/: discrete_state_space_systems_impl.h  integral_discrete_state_space_systems_impl.h  integral_state_space_systems_impl.h  state_space_systems_impl.h
state_space_systems/src/: state_space_systems.cpp
state_space_systems/test/: plot.py  test_state_space_matrix.cpp  test_state_space_matrix.launch
