<?xml version="1.0"?>
<package format="2">
  <name>frequency_identification</name>
  <version>0.0.0</version>
  <description>The frequency_identification package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSM</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>state_space_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>state_space_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>state_space_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>
</package>
