<?xml version="1.0"?>
<package format="2">
  <name>frequency_identification</name>
  <version>0.0.0</version>
  <description>The frequency_identification package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSM</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>state_space_ros</build_export_depend>
  <build_depend>state_space_ros</build_depend>
  <exec_depend>state_space_ros</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

<build_export_depend>cnr_logger</build_export_depend>
<build_depend>cnr_logger</build_depend>
<exec_depend>cnr_logger</exec_depend>

<build_export_depend>sensor_msgs</build_export_depend>
<build_depend>sensor_msgs</build_depend>
<exec_depend>sensor_msgs</exec_depend>


  <export>
  </export>
</package>
