<?xml version="1.0"?>
<package format="2">
  <name>state_space_controllers</name>
  <version>0.0.0</version>
  <description>The state_space_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="feymann@todo.todo">feymann</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>D</license>
  <license>O</license>
  <license>O</license>
  <license>T</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/state_space_controllers</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_matrix_utils</build_depend>
  <build_depend>state_space_systems</build_depend>
  <build_export_depend>eigen_matrix_utils</build_export_depend>
  <build_export_depend>state_space_systems</build_export_depend>
  <exec_depend>eigen_matrix_utils</exec_depend>
  <exec_depend>state_space_systems</exec_depend>

  <test_depend>curl</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
