<?xml version="1.0"?>
<package format="2">
  <name>state_space_controllers</name>
  <version>0.0.0</version>
  <description>The state_space_controllers package</description>

  <maintainer email="nicola.pedrocchi@cnr.stiima.it">feymann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>eigen_matrix_utils</build_depend>
  <build_depend>state_space_systems</build_depend>
  <build_export_depend>eigen_matrix_utils</build_export_depend>
  <build_export_depend>state_space_systems</build_export_depend>
  <exec_depend>eigen_matrix_utils</exec_depend>
  <exec_depend>state_space_systems</exec_depend>

  <test_depend>curl</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
